# same-same

./: .gitignore  README.md  SAME-SAME-DESIGN.md  homework.md  internal_defects.csv  mock_config.json  pyproject.toml  requirements.txt  vendor_defects.csv
docs/superpowers/plans/: 2026-04-25-same-same-implementation.md
docs/superpowers/specs/: 2026-04-25-defect-deduplication-design.md
scripts/: generate_mock_data.py
src/same_same/: cli.py  config.py  matcher.py  reporter.py  vectorizer.py
tests/: test_cli.py  test_config.py  test_data_loader.py  test_matcher.py  test_reporter.py  test_reporter_robustness.py  test_reporter_robustness_v2.py  test_vectorizer.py
