[project]
name = "same-same"
version = "0.1.0"
description = "Semantic defect deduplication tool"
requires-python = ">=3.11"
dependencies = [
    "spacy>=3.8.14",
    "en-core-web-md @ https://github.com/explosion/spacy-models/releases/download/en_core_web_md-3.8.0/en_core_web_md-3.8.0-py3-none-any.whl",
    "scikit-learn",
    "pandas",
    "numpy",
]

[dependency-groups]
dev = [
    "pytest",
]

[project.scripts]
same-same = "same_same.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
